--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "typescript": "^4.7.4"
   },
   "scripts": {
-    "test": "node --no-warnings --experimental-vm-modules node_modules/.bin/jest build --verbose"
+    "pretest": "yarn build",
+    "test": "node --no-warnings --experimental-vm-modules node_modules/.bin/jest build --verbose",
+    "build": "tsc --build --verbose"
   }
 }
