--- a/.github/workflows/factory.yml
+++ b/.github/workflows/factory.yml
@@ -13,4 +13,9 @@ jobs:
                 node-version: 16.x
             - run: |
                 yarn install
-                yarn test
+                yarn build
+                node --no-warnings \
+                     --experimental-vm-modules \
+                     node_modules/.bin/jest \
+                     build/Factory/test.js \
+                     --verbose
