--- a/.github/workflows/factory.yml
+++ b/.github/workflows/factory.yml
@@ -8,7 +8,7 @@ jobs:
                 os: [ ubuntu-latest, windows-latest, macos-latest ]
         runs-on: ${{ matrix.os }}
         steps:
-            - uses: actions/setup-node@3
+            - uses: actions/setup-node@v3
               with:
                 node-version: 16.x
             - run: |
