--- a/.github/workflows/factory.yml
+++ b/.github/workflows/factory.yml
@@ -15,8 +15,4 @@ jobs:
             - run: |
                 yarn install
                 yarn build
-                node --no-warnings \
-                     --experimental-vm-modules \
-                     node_modules/.bin/jest \
-                     build/Factory/test.js \
-                     --verbose
+                node --no-warnings --experimental-vm-modules node_modules/.bin/jest build/Factory/test.js --verbose
