--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Factory pattern CI
+name: CI
 on: [ push, pull_request ]
 
 jobs:
@@ -14,5 +14,4 @@ jobs:
                 node-version: 16.x
             - run: |
                 yarn install
-                yarn build
-                node --no-warnings --experimental-vm-modules node_modules/.bin/jest build/Factory/test.js --verbose
+                yarn test
